# data-pipeline-with-tdd

./: Dockerfile  Makefile  README.md  docker-compose.yaml
projects/sparktdd/: Makefile  pyproject.toml
projects/sparktdd/app/: main.py
projects/sparktdd/app/jobs/: ingestion.py
projects/sparktdd/app/transformations/: distance_transformer.py
projects/sparktdd/notebooks/: citibike-test.ipynb
projects/sparktdd/tests/unit/: test_distance_transformer.py
