[tool.poetry]
name = "sparktdd"
version = "0.1.0"
description = "Using spark with tdd techinique"
authors = ["Natan Nascimento <contato@natanascimento.com>"]

[tool.poetry.dependencies]
numpy = "^1.20.2"
pandas = "^1.2.4"
pyarrow = "^4.0.0"
pyspark = "^3.1.1"
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
